[tool.poetry]
name = "dadabot"
version = "0.1.0"
description = ""
authors = ["Sebastian Zapata <s.zapata05@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
selenium = "^4.8.3"
xlsxwriter = "^3.1.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
